--- a/template/aerial/index.html
+++ b/template/aerial/index.html
@@ -3,14 +3,14 @@
 <html>
 
 <head>
-	<title>Aerial</title>
+	<title>DesainerHub | Aerial</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	<meta name="description" content="Maximum IT Solution, Web design, Logo design, Graphics Design, Mobile Apps, Desktop Support, Hosting, Domain, Server">
-	<meta name="keywords" content="Maximum IT Solution, Web design, Logo design, Graphics Design, Mobile Apps, Desktop Support, Hosting, Domain, Server, VPS, website, wordpress, blogspot, webbly, joomla">
+	<meta name="description" content="DesainerHub, Web design, Logo design, Graphics Design, Mobile Apps, Desktop Support, Hosting, Domain, Server">
+	<meta name="keywords" content="DesainerHub, Web design, Logo design, Graphics Design, Mobile Apps, Desktop Support, Hosting, Domain, Server, VPS, website, wordpress, blogspot, webbly, joomla">
 	<meta name="author" content="Maksum Rifai">
 	<link rel="icon" href="../assets/favicon.ico">
 	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -25,7 +25,7 @@
 			<!-- Header -->
 			<header id="header">
 				<h1>DesainerHub</h1>
-				<p>Web Desain &nbsp;&bull;&nbsp; Hosting &nbsp;&bull;&nbsp; Domain</p>
+				<p>Web Desain &nbsp;&bull;&nbsp; Graphic Desain &nbsp;&bull;&nbsp;</p>
 				<nav>
 					<ul>
 						<li><a href="https://www.youtube.com/channel/UCGyHF_JvEIe0CIMHDrmQdUQ" class="fab fa-youtube"><span class="label">Youtube</span></a></li>
@@ -42,7 +42,7 @@
 
 			<!-- Footer -->
 			<footer id="footer">
-				<span class="copyright">&copy; <a href="https://desainerhub.com">DesainerHub</a>.</span>
+				<span class="copyright">&copy; <a href="https://desainerhub.com">DesainerHub</a>- Template</span>
 			</footer>
 
 		</div>
