--- a/template/index.html
+++ b/template/index.html
@@ -3,14 +3,14 @@
 <html>
 
 <head>
-	<title>DesainerHub | Template</title>
+	<title>DesainerHub | Web Template</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<meta name="description" content="DesainerHub, Web Template, Web design, Logo design, Graphics Design, Mobile Apps, Desktop Support, Hosting, Domain, Server">
-		<meta name="keywords" content="Maximum IT Solution, DesainerHub, Web Template, Web design, Logo design, Graphics Design, Mobile Apps, Desktop Support, Hosting, Domain, Server, VPS, website, wordpress, blogspot, webbly, joomla">
+		<meta name="keywords" content="DesainerHub, Web Template, Web design, Logo design, Graphics Design, Mobile Apps, Desktop Support, Hosting, Domain, Server, VPS, website, wordpress, blogspot, webbly, joomla">
 		<meta name="author" content="Maksum Rifai">
 		<link rel="icon" href="assets/favicon.ico">
 	</head>
@@ -22,7 +22,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1><a href="https://desainerhub.com"><strong>DesainerHub.com</strong></a> | <a href="https://github.com/desainerhub/desainerhub.github.io">Source on Github</a></h1>
+			<h1><a href="https://desainerhub.com"><strong>DesainerHub.com</strong></a> | <a href="https://github.com/desainerhub/desainerhub.github.io">Source</a></h1>
 			<nav>
 				<ul>
 					<li><a href="#footer" class="icon fa-info-circle">About</a></li>
@@ -221,7 +221,7 @@
 				<div>
 					<section>
 						<h2>Web Template HTML5</h2>
-						<p>Kumpulan template website dengan menggunakan HTML5</p>
+						<p>Web Templates Collection made with HTML5</p>
 					</section>
 					<section>
 						<h2>Follow Us on ...</h2>
@@ -235,7 +235,7 @@
 						</ul>
 					</section>
 					<p class="copyright">
-						<a href="https://desainerhub.com">&copy; DesainerHub | 2018 Hingga Saat Ini</a>.
+						<a href="https://desainerhub.com">&copy; HTML5 UP • DesainerHub • 2018 - Now</a>.
 					</p>
 				</div>
 				<div>
