--- a/template/arcana/index.html
+++ b/template/arcana/index.html
@@ -6,8 +6,8 @@
 	<title>Arcana | HTML5up</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<meta name="description" content="Maximum IT Solution, Web design, Logo design, Graphics Design, Mobile Apps, Desktop Support, Hosting, Domain, Server">
-	<meta name="keywords" content="Maximum IT Solution, Web design, Logo design, Graphics Design, Mobile Apps, Desktop Support, Hosting, Domain, Server, VPS, website, wordpress, blogspot, webbly, joomla">
+	<meta name="description" content="DesainerHub, Web design, Logo design, Graphics Design, Mobile Apps, Desktop Support, Hosting, Domain, Server">
+	<meta name="keywords" content="Desainerhub, Web design, Logo design, Graphics Design, Mobile Apps, Desktop Support, Hosting, Domain, Server, VPS, website, wordpress, blogspot, webbly, joomla">
 	<meta name="author" content="Maksum Rifai">
 	<link rel="icon" href="../assets/favicon.ico">
 	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
