--- a/template/dimension/index.html
+++ b/template/dimension/index.html
@@ -92,7 +92,7 @@
 								<ul class="icons">
 									<li><a href="https://bit.ly/desainerhub-yt" class="fab fa-youtube"></a></li>
 									<li><a href="https://www.instagram.com/desainerhub" class="fab fa-instagram"></a></li>
-									<li><a href="https://www.facebook.com/desainerhub class="fab fa-facebook-square"></a></li>
+									<li><a href="https://www.facebook.com/desainerhub" class="fab fa-facebook-square"></a></li>
 									<li><a href="https://desainerhub.com/blog" class="fas fa-newspaper"></a></li>
 									<li><a href="https://github.com/desainerhub" class="fab fa-github"></a></li>
 									<li><a href="mailto:info@desainerhub.com" class="far fa-envelope"></a></li>
