--- a/template/dimension/index.html
+++ b/template/dimension/index.html
@@ -159,14 +159,14 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="https://www.youtube.com/channel/UClwHk7_bAL5JPhZzr1QdbPg/" class="fab fa-youtube"></a></li>
-										<li><a href="https://www.instagram.com/mits.id" class="fab fa-instagram"></a></li>
-										<li><a href="https://www.facebook.com/maximumitsolution" class="fab fa-facebook-square"></a></li>
-										<li><a href="https://HTML5up.com/blog" class="fas fa-newspaper"></a></li>
-										<li><a href="https://github.com/HTML5up" class="fab fa-github"></a></li>
-										<li><a href="mailto:info@HTML5up.com" class="far fa-envelope"></a></li>
-										<li><a href="https://slack.HTML5up.com" class="fab fa-slack"></a></li>
-										<li><a href="https://wa.me/628978553523" class="fab fa-whatsapp"></a></li>
+										<li><a href="https://bit.ly/desainerhub-yt" class="fab fa-youtube"></a></li>
+									<li><a href="https://www.instagram.com/desainerhub" class="fab fa-instagram"></a></li>
+									<li><a href="https://www.facebook.com/desainerhub" class="fab fa-facebook-square"></a></li>
+									<li><a href="https://desainerhub.com/blog" class="fas fa-newspaper"></a></li>
+									<li><a href="https://github.com/desainerhub" class="fab fa-github"></a></li>
+									<li><a href="mailto:info@desainerhub.com" class="far fa-envelope"></a></li>
+									<li><a href="https://slack.desainerhub.com" class="fab fa-slack"></a></li>
+									<li><a href="https://wa.me/628978553523" class="fab fa-whatsapp"></a></li>
 									</ul>
 
 									<h4>Actions</h4>
