--- a/template/index.html
+++ b/template/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>DesainerHub | Web Template</title>
+	<title>DesainerHub | Web Template By HTML5up</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -73,7 +73,7 @@
 				<h2>Escape Velocity</h2>
 			</article>
 			<article class="thumb">
-				<a href="ethereal/index.html" target="_blank"><img src="img-cover/ethereal.jpg" alt="ethereal" /></a>
+				<a href="ethereal/" target="_blank"><img src="img-cover/ethereal.jpg" alt="ethereal" /></a>
 				<h2>Ethereal</h2>
 			</article>
 			<article class="thumb">
@@ -235,7 +235,7 @@
 						</ul>
 					</section>
 					<p class="copyright">
-						<a href="https://desainerhub.com">&copy; HTML5 UP • DesainerHub • 2018 - Now</a>.
+						&copy; <a href="https://html5up.net">HTML5 UP</a> • <a href="https://desainerhub.com">DesainerHub • 2018 - Now</a>.
 					</p>
 				</div>
 				<div>
